PR/43563: Wolfgang Solfrank: boot.cfg doesn't support comments Fix makes it support # comments and treat spaces and tabs the same way.